--- a/assets/src/scss/components/_questions.scss
+++ b/assets/src/scss/components/_questions.scss
@@ -113,6 +113,7 @@
     text-align: center;
     font-weight: bold;
     pointer-events: none;
+    width: 100%;
 
     span {
       display: block;
